fixed alignment of buttons

--- a/src/app/components/shared/comment-list/comment-list.component.scss
+++ b/src/app/components/shared/comment-list/comment-list.component.scss
@@ -108,12 +108,12 @@ app-comment {
 }
 
 .freezeIcon {
-  transform: scale(1.7);
+  transform: scale(1.7) translateY(4px);
   color: var(--secondary);
 }
 
 .playIcon {
-  transform: scale(1.7);
+  transform: scale(1.7) translateY(4px);
   color: var(--red);
 }
 
